# readmit-bench

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRACT.md  Dockerfile  Dockerfile.flask  LICENSE  MODEL_CARD.md  Procfile  README.md  README_HF.md  flask_app.py  pyproject.toml  render.yaml  requirements-api.txt  requirements-flask.txt
.github/workflows/: ci.yml
docs/: architecture.md
models/: winner_calibrator.joblib  winner_threshold.json
models/tuned/: xgboost.joblib
notebooks/: 01_eda.ipynb  02_features.ipynb  03_baselines.ipynb  04_tuning.ipynb  05_calibration.ipynb  06_shap.ipynb  07_fairness.ipynb
reports/: baselines.csv  calibration_summary.csv  drift_summary.json  ensembles_summary.csv  fairness_gaps.json  fairness_summary.csv  shap_top_features.csv  split_summary.csv  tuned_summary.csv  v2_leaderboard.csv
reports/lime/: high_risk_0.html  high_risk_1.html  high_risk_2.html  lime_summary.csv  low_risk_0.html  low_risk_1.html  low_risk_2.html
reports/tuning/: catboost_trials.csv  hist_gradient_boosting_trials.csv  xgboost_trials.csv
scripts/: build_baselines_notebook.py  build_calibration_notebook.py  build_eda_notebook.py  build_fairness_notebook.py  build_features_notebook.py  build_report.py  build_shap_notebook.py  build_tuning_notebook.py  deploy_hf_spaces.py  record_demo.py  redeploy_api.py  redeploy_flask.py  sample_payload.json
src/readmit_bench/: __init__.py
src/readmit_bench.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/readmit_bench/api/: main.py  predictor.py  schemas.py
src/readmit_bench/calibration/: __init__.py  calibrate.py  plots.py
src/readmit_bench/data/: cohort.py  download.py
src/readmit_bench/drift/: evidently_report.py
src/readmit_bench/eda/: __init__.py  plots.py
src/readmit_bench/ensembles/: __init__.py  combine.py
src/readmit_bench/evaluation/: __init__.py  metrics.py
src/readmit_bench/explainability/: lime_runner.py  plots.py  shap_runner.py
src/readmit_bench/fairness/: audit.py  plots.py
src/readmit_bench/features/: __init__.py  build.py  derive.py  pipeline.py  plots.py  split.py
static/: style.css
templates/: index.html
tests/: __init__.py  conftest.py  test_api.py  test_api_schemas.py  test_calibration.py  test_fairness.py  test_features.py  test_shap.py  test_smoke.py  test_tuning.py
(+15 files in other folders)
