[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "readmit-bench"
version = "0.1.0"
description = "Senior ML Engineer portfolio: end-to-end healthcare ML pipeline on CMS DE-SynPUF (30-day readmission)."
readme = "README.md"
requires-python = ">=3.10,<3.13"
authors = [{ name = "HaMMaDy", email = "xhammady@users.noreply.github.com" }]
license = { text = "MIT" }
keywords = ["machine-learning", "healthcare", "readmission", "mlops", "fairness", "shap"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "numpy>=1.26",
    "pandas>=2.2",
    "polars>=1.0",
    "pyarrow>=15",
    "scikit-learn>=1.4",
    "scipy>=1.12",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "plotly>=5.20",
    "joblib>=1.3",
    "tqdm>=4.66",
    "requests>=2.31",
    "pydantic>=2.6",
]

[project.optional-dependencies]
ml = [
    "xgboost>=2.0",
    "lightgbm>=4.3",
    "catboost>=1.2",
    "optuna>=3.6",
    "mlflow>=2.13",
    "shap>=0.45",
    "lime>=0.2.0.1",
    "fairlearn>=0.10",
    "category-encoders>=2.6",
    "imbalanced-learn>=0.12",
    "evidently>=0.4",
    "flaml[automl]>=2.1",
]
nn = [
    "torch>=2.2",
    "pytorch-tabnet>=4.1",
]
api = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "streamlit>=1.33",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "black>=24.3",
    "ruff>=0.4",
    "mypy>=1.9",
    "pre-commit>=3.7",
    "ipykernel>=6.29",
    "jupyter>=1.0",
    "nbformat>=5.10",
]

[project.urls]
Homepage = "https://github.com/xHaMMaDy/readmit-bench"
Repository = "https://github.com/xHaMMaDy/readmit-bench"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_ignores = true
no_implicit_optional = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q --cov=src/readmit_bench --cov-report=term-missing"
